Form was no longer interactive, removed z-index -1.

--- a/src/Components/Registration/RegistrationForm.css
+++ b/src/Components/Registration/RegistrationForm.css
@@ -12,7 +12,6 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
-    z-index: -1;
     margin-top: 66px;
     position: relative;
     height: calc(100vh - 66px);
